--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
+    "@iconify-json/lucide": "^1.2.82",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.18"
   }
 }
