--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.4",
     "@astrojs/node": "^9.5.1",
     "@iconify-json/lucide": "^1.2.82",
     "@supabase/supabase-js": "^2.89.0",
